--- a/practice_01/index.html
+++ b/practice_01/index.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- BS4  CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
+    <title>Practice 01</title>
+  </head>
+  <body>
+
+    <!-- Exercise 01 -->
+    <div class="ex01 border border-primary container my-5">
+      <h2 class="text-center py-3">Exercise 01</h2>
+      <form class="container w-50">
+        <div class="form-group">
+          <label for="salary">Salary/day:</label>
+          <input
+            type="number"
+            class="form-control"
+            id="salary"
+            placeholder="Fill in here.."
+          />
+        </div>
+        <div class="form-group">
+          <label for="days">Days</label>
+          <input type="number" class="form-control" id="days" placeholder=".." />
+        </div>
+        <button type="button" class="btn btn-primary" id="btn_ex01">Calculate</button>
+      </form>
+      <div class="bg-success w-50 mx-auto my-3 px-3 rounded">
+        <i class="fas fa-hand-point-right text-warning px-2"></i>
+        <p class="text-dark font-weight-bold d-inline" id="result" style="height: 40px; line-height: 40px;"></p>
+      </div>
+    </div>
+
+    <!-- Exercise 02 -->
+    <!-- BS4 JS -->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Ex01 -->
+    <script src="./exercise01.js"></script>
+  </body>
 </html>
