--- a/practice_01/index.html
+++ b/practice_01/index.html
@@ -43,6 +43,48 @@
     </div>
 
     <!-- Exercise 02 -->
+    <div class="ex01 border border-primary container my-5">
+      <h2 class="text-center py-3">Exercise 02</h2>
+      <form class="container w-50">
+        <div class="row">
+          <div class="col-4">
+            <div class="form-group">
+              <label for="num1">Num1</label>
+              <input type="number" class="form-control" id="num1" />
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="form-group">
+              <label for="num2">Num2</label>
+              <input type="number" class="form-control" id="num2" />
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="form-group">
+              <label for="num3">Num3</label>
+              <input type="number" class="form-control" id="num3" />
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="form-group">
+              <label for="num4">Num4</label>
+              <input type="number" class="form-control" id="num4" />
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="form-group">
+              <label for="num5">Num5</label>
+              <input type="number" class="form-control" id="num5" />
+            </div>
+          </div>
+        </div>
+        <button type="button" class="btn btn-primary" id="btn_ex02">Calculate</button>
+      </form>
+      <div class="bg-success w-50 mx-auto my-3 px-3 rounded">
+        <i class="fas fa-hand-point-right text-warning px-2"></i>
+        <p class="text-dark font-weight-bold d-inline" id="result_ex02" style="height: 40px; line-height: 40px;"></p>
+      </div>
+    </div>
     <!-- BS4 JS -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -56,5 +98,7 @@
     ></script>
     <!-- Ex01 -->
     <script src="./exercise01.js"></script>
+    <!-- Ex02 -->
+    <script src="./exercise02.js"></script>
   </body>
 </html>
