--- a/practice_01/index.html
+++ b/practice_01/index.html
@@ -19,7 +19,8 @@
 
     <!-- Exercise 01 -->
     <div class="ex01 border border-primary container my-5">
-      <h2 class="text-center py-3">Exercise 01</h2>
+      <h2 class="text-center pt-3">Exercise 01</h2>
+      <small class="form-text text-muted text-center pb-3">Salary staff calculate</small>
       <form class="container w-50">
         <div class="form-group">
           <label for="salary">Salary/day:</label>
@@ -44,7 +45,8 @@
 
     <!-- Exercise 02 -->
     <div class="ex01 border border-primary container my-5">
-      <h2 class="text-center py-3">Exercise 02</h2>
+      <h2 class="text-center pt-3">Exercise 02</h2>
+      <small class="form-text text-muted text-center pb-3">Average calculate</small>
       <form class="container w-50">
         <div class="row">
           <div class="col-4">
@@ -85,6 +87,22 @@
         <p class="text-dark font-weight-bold d-inline" id="result_ex02" style="height: 40px; line-height: 40px;"></p>
       </div>
     </div>
+    <!-- Exercise 03 -->
+    <div class="ex01 border border-primary container my-5">
+      <h2 class="text-center pt-3">Exercise 03</h2>
+      <small class="form-text text-muted text-center pb-3">Usd convert to vnd currency</small>
+      <form class="container w-50">
+        <div class="form-group">
+          <label for="usd">USD</label>
+          <input type="number" class="form-control" id="usd" />
+        </div>
+        <button type="button" class="btn btn-primary" id="btn_ex03">Convert</button>
+      </form>
+      <div class="bg-success w-50 mx-auto my-3 px-3 rounded">
+        <i class="fas fa-hand-point-right text-warning px-2"></i>
+        <p class="text-dark font-weight-bold d-inline" id="result_ex03" style="height: 40px; line-height: 40px;"></p>
+      </div>
+    </div>
     <!-- BS4 JS -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -100,5 +118,7 @@
     <script src="./exercise01.js"></script>
     <!-- Ex02 -->
     <script src="./exercise02.js"></script>
+    <!-- Ex03 -->
+    <script src="./exercise03.js"></script>
   </body>
 </html>
