--- a/practice_02/index.html
+++ b/practice_02/index.html
@@ -82,6 +82,86 @@
         ></p>
       </div>
     </div>
+    <!-- Exercise 03 -->
+    <div class="ex01 border border-primary container my-5">
+      <h2 class="text-center pt-3">Exercise 03</h2>
+      <small class="form-text text-muted text-center pb-3"
+        >Counting odd and even numbers</small
+      >
+      <form class="container w-50">
+        <div class="row">
+          <div class="col-4">
+            <div class="form-group">
+              <label for="number1">Number 1:</label>
+              <input type="number" class="form-control" id="number1" />
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="form-group">
+              <label for="number2">Number 2:</label>
+              <input type="number" class="form-control" id="number2" />
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="form-group">
+              <label for="number3">Number 3:</label>
+              <input type="number" class="form-control" id="number3" />
+            </div>
+          </div>
+        </div>
+        <button type="button" class="btn btn-primary" id="btn_ex03">
+          Count
+        </button>
+      </form>
+      <div class="bg-success w-50 mx-auto my-3 px-3 rounded">
+        <i class="fas fa-hand-point-right text-warning px-2"></i>
+        <p
+          class="text-dark font-weight-bold d-inline"
+          id="resultEx03"
+          style="height: 40px; line-height: 40px"
+        ></p>
+      </div>
+    </div>
+    <!-- Exercise 04 -->
+    <div class="ex01 border border-primary container my-5">
+      <h2 class="text-center pt-3">Exercise 04</h2>
+      <small class="form-text text-muted text-center pb-3"
+        >Guessing triangle type</small
+      >
+      <form class="container w-50">
+        <div class="row">
+          <div class="col-4">
+            <div class="form-group">
+              <label for="edge1">Edge 1:</label>
+              <input type="number" class="form-control" id="edge1" min="0" />
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="form-group">
+              <label for="edge2">Edge 2:</label>
+              <input type="number" class="form-control" id="edge2" min="0" />
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="form-group">
+              <label for="edge3">Edge 3:</label>
+              <input type="number" class="form-control" id="edge3" min="0" />
+            </div>
+          </div>
+        </div>
+        <button type="button" class="btn btn-primary" id="btn_ex04">
+          Guess
+        </button>
+      </form>
+      <div class="bg-success w-50 mx-auto my-3 px-3 rounded">
+        <i class="fas fa-hand-point-right text-warning px-2"></i>
+        <p
+          class="text-dark font-weight-bold d-inline"
+          id="resultEx04"
+          style="height: 40px; line-height: 40px"
+        ></p>
+      </div>
+    </div>
     <!-- BS4 JS -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -95,5 +175,7 @@
     ></script>
     <script src="./exercise01.js"></script>
     <script src="./exercise02.js"></script>
+    <script src="./exercise03.js"></script>
+    <script src="./exercise04.js"></script>
   </body>
 </html>
