--- a/practice_03/index.html
+++ b/practice_03/index.html
@@ -185,5 +185,6 @@
     ></script>
     <script src="./exercise_01.js"></script>
     <script src="./exercise_02.js"></script>
+    <script src="./exercise_03.js"></script>
   </body>
 </html>
