--- a/practice_03/index.html
+++ b/practice_03/index.html
@@ -146,7 +146,7 @@
               type="number"
               class="form-control"
               id="thuNhap"
-              placeholder="Tổng thu nhập năm:"
+              placeholder="Tổng thu nhập năm"
             />
           </div>
           <div class="col-6 form-group">
@@ -155,7 +155,7 @@
               type="number"
               class="form-control"
               id="songuoi"
-              placeholder="Số người phụ thuộc:"
+              placeholder="Số người phụ thuộc"
             />
           </div>
         </div>
@@ -168,6 +168,62 @@
         <p
           class="text-dark font-weight-bold d-inline"
           id="resultEx03"
+          style="height: 40px; line-height: 40px"
+        ></p>
+      </div>
+    </div>
+    <!-- Exercise 04 -->
+    <div class="ex01 border border-primary container my-5">
+      <h2 class="text-center pt-3">Exercise 04</h2>
+      <small class="form-text text-muted text-center pb-3">Tính tiền cáp</small>
+      <form class="container w-50">
+        <div class="row myClass">
+          <div class="col-6 form-group">
+            <label for="loai-KH">Loại khách hàng:</label>
+            <select class="form-control" id="loai-KH" onchange="myFunction()">
+              <option value="">Chọn loại khách hàng</option>
+              <option value="nha-dan">Nhà dân</option>
+              <option value="doanh-nghiep">Doanh nghiệp</option>
+            </select>
+          </div>
+          <div class="col-6 form-group">
+            <label for="ma-KH">Nhập mã khách hàng:</label>
+            <input
+              type="text"
+              class="form-control"
+              id="ma-KH"
+              placeholder="..."
+            />
+          </div>
+          <div class="d-none" id="visible">
+            <label for="so-ketnoi">Số kết nối:</label>
+            <input
+              type="number"
+              class="form-control"
+              id="so-ketnoi"
+              placeholder="..."
+            />
+          </div>
+
+          <div class="col-6 form-group">
+            <label for="kenh-dk">Số kênh cao cấp :</label>
+            <input
+              type="number"
+              class="form-control"
+              id="kenh-dk"
+              placeholder="..."
+            />
+          </div>
+        </div>
+        <button type="button" class="btn btn-primary" id="btn_ex04">
+          Tính tiền cáp
+        </button>
+      </form>
+      <div class="bg-success w-50 mx-auto my-3 px-3 rounded">
+        <i class="fas fa-hand-point-right text-warning px-2"></i>
+        <p
+          class="text-dark font-weight-bold d-inline"
+          id="resultEx04"
           style="height: 40px; line-height: 40px"
         ></p>
       </div>
@@ -186,5 +242,6 @@
     <script src="./exercise_01.js"></script>
     <script src="./exercise_02.js"></script>
     <script src="./exercise_03.js"></script>
+    <script src="./exercise_04.js"></script>
   </body>
 </html>
