--- a/practice_04/index.html
+++ b/practice_04/index.html
@@ -54,6 +54,29 @@
         ></p>
       </div>
     </div>
+    <!-- Exercise 02 -->
+    <div class="ex01 border border-primary container my-5">
+      <h2 class="text-center pt-3">Exercise 02</h2>
+      <small class="form-text text-muted text-center pb-3"
+        >Đếm số chia hết cho 3</small
+      >
+      <form class="container w-50">
+        <button type="button" class="btn btn-primary" id="btn_ex021">
+          Xem kết quả (for loop)
+        </button>
+        <button type="button" class="btn btn-primary" id="btn_ex022">
+          Xem kết quả (while loop)
+        </button>
+      </form>
+      <div class="bg-success w-50 mx-auto my-3 px-3 rounded">
+        <i class="fas fa-hand-point-right text-warning px-2"></i>
+        <p
+          class="text-dark font-weight-bold d-inline"
+          id="resultEx02"
+          style="height: 40px; line-height: 40px"
+        ></p>
+      </div>
+    </div>
     <!-- BS4 JS -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -66,5 +89,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="./exercise_01.js"></script>
+    <script src="./exercise_02.js"></script>
   </body>
 </html>
