--- a/practice_04/index.html
+++ b/practice_04/index.html
@@ -77,6 +77,149 @@
         ></p>
       </div>
     </div>
+    <!-- Exercise 03 -->
+    <div class="ex01 border border-primary container my-5">
+      <h2 class="text-center pt-3">Exercise 03</h2>
+      <small class="form-text text-muted text-center pb-3"
+        >Tìm số nguyên dương n nhỏ nhất 1 + 2 + … + n > 10000</small
+      >
+      <form class="container w-50">
+        <button type="button" class="btn btn-primary" id="btn_ex03">
+          Xem kết quả
+        </button>
+      </form>
+      <div class="bg-success w-50 mx-auto my-3 px-3 rounded">
+        <i class="fas fa-hand-point-right text-warning px-2"></i>
+        <p
+          class="text-dark font-weight-bold d-inline"
+          id="resultEx03"
+          style="height: 40px; line-height: 40px"
+        ></p>
+      </div>
+    </div>
+    <!-- Exercise 04 -->
+    <div class="ex01 border border-primary container my-5">
+      <h2 class="text-center pt-3">Exercise 04</h2>
+      <small class="form-text text-muted text-center pb-3"
+        >Tính tổng: S(n) = x + x^2 + x^3 + … + x^n</small
+      >
+      <form class="container w-50">
+        <div class="row">
+          <div class="col-6 form-group">
+            <label for="xNum">Nhập số x:</label>
+            <input
+              type="number"
+              class="form-control"
+              id="xNum"
+              placeholder="..."
+            />
+          </div>
+          <div class="col-6 form-group">
+            <label for="nNum">Nhập số n:</label>
+            <input
+              type="number"
+              class="form-control"
+              id="nNum"
+              placeholder="..."
+            />
+          </div>
+        </div>
+        <button type="button" class="btn btn-primary" id="btn_ex04">
+          Tính tổng
+        </button>
+      </form>
+      <div class="bg-success w-50 mx-auto my-3 px-3 rounded">
+        <i class="fas fa-hand-point-right text-warning px-2"></i>
+        <p
+          class="text-dark font-weight-bold d-inline"
+          id="resultEx04"
+          style="height: 40px; line-height: 40px"
+        ></p>
+      </div>
+    </div>
+    <!-- Exercise 05 -->
+    <div class="ex01 border border-primary container my-5">
+      <h2 class="text-center pt-3">Exercise 05</h2>
+      <small class="form-text text-muted text-center pb-3"
+        >Tính giai thừa</small
+      >
+      <form class="container w-50">
+        <div class="row">
+          <div class="col-6 form-group">
+            <label for="num">Nhập số n:</label>
+            <input
+              type="number"
+              class="form-control"
+              id="num"
+              placeholder="..."
+            />
+          </div>
+        </div>
+        <button type="button" class="btn btn-primary" id="btn_ex05">
+          Tính
+        </button>
+      </form>
+      <div class="bg-success w-50 mx-auto my-3 px-3 rounded">
+        <i class="fas fa-hand-point-right text-warning px-2"></i>
+        <p
+          class="text-dark font-weight-bold d-inline"
+          id="resultEx05"
+          style="height: 40px; line-height: 40px"
+        ></p>
+      </div>
+    </div>
+    <!-- Exercise 06 -->
+    <div class="ex01 border border-primary container my-5">
+      <h2 class="text-center pt-3">Exercise 06</h2>
+      <small class="form-text text-muted text-center pb-3"
+        >Tạo thẻ div</small
+      >
+      <form class="container w-50">
+        <button type="button" class="btn btn-primary" id="btn_ex06">
+          Tạo thẻ
+        </button>
+      </form>
+      <div class="bg-success w-50 mx-auto my-3 p-2 rounded">
+        <i class="fas fa-hand-point-right text-warning px-2"></i>
+        <div
+          class="text-dark font-weight-bold d-inline"
+          id="resultEx06"
+          style="height: 40px; line-height: 40px"
+        >
+      </div>
+      </div>
+    </div>
+        <!-- Exercise 07 -->
+        <div class="ex01 border border-primary container my-5">
+          <h2 class="text-center pt-3">Exercise 07</h2>
+          <small class="form-text text-muted text-center pb-3"
+            >Tìm số nguyên tố từ 1 đến n</small
+          >
+          <form class="container w-50">
+            <div class="row">
+              <div class="col-6 form-group">
+                <label for="myNumber">Nhập số n:</label>
+                <input
+                  type="number"
+                  class="form-control"
+                  id="myNumber"
+                  placeholder="..."
+                />
+              </div>
+            </div>
+            <button type="button" class="btn btn-primary" id="btn_ex07">
+              In số
+            </button>
+          </form>
+          <div class="bg-success w-50 mx-auto my-3 px-3 rounded">
+            <i class="fas fa-hand-point-right text-warning px-2"></i>
+            <p
+              class="text-dark font-weight-bold d-inline"
+              id="resultEx07"
+              style="height: 40px; line-height: 40px"
+            ></p>
+          </div>
+        </div>
     <!-- BS4 JS -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -90,5 +233,10 @@
     ></script>
     <script src="./exercise_01.js"></script>
     <script src="./exercise_02.js"></script>
+    <script src="./exercise_03.js"></script>
+    <script src="./exercise_04.js"></script>
+    <script src="./exercise_05.js"></script>
+    <script src="./exercise_06.js"></script>
+    <script src="./exercise_07.js"></script>
   </body>
 </html>
