--- a/practice_05/index.html
+++ b/practice_05/index.html
@@ -62,15 +62,15 @@
                 data-toggle="collapse"
                 data-target="#tongSoDuong"
               >
-              <span class="bg-primary px-2 py-1 text-dark border border-secondary">1</span> Tổng số dương
+                <span
+                  class="bg-primary px-2 py-1 text-dark border border-secondary"
+                  >1</span
+                >
+                Tổng số dương
               </button>
             </h2>
           </div>
-          <div
-            id="tongSoDuong"
-            class="collapse"
-            data-parent="#myPractice"
-          >
+          <div id="tongSoDuong" class="collapse" data-parent="#myPractice">
             <div class="card-body">
               <button type="button" class="btn btn-primary mb-3" id="btn_01">
                 Tính tổng
@@ -82,43 +82,43 @@
                   id="resultEx01"
                   style="height: 40px; line-height: 40px"
                 ></p>
+              </div>
             </div>
           </div>
-        </div>
         </div>
         <!-- Đếm số dương -->
         <div class="card">
-        <div class="card-header" id="card_ex02">
-          <h2 class="mb-0">
-            <button
-              class="btn text-left w-100"
-              type="button"
-              data-toggle="collapse"
-              data-target="#demSoDuong"
-            >
-              <span class="bg-primary px-2 py-1 text-dark border border-secondary">2</span> Đếm số dương
-            </button>
-          </h2>
-        </div>
-        <div
-          id="demSoDuong"
-          class="collapse"
-          data-parent="#myPractice"
-        >
-          <div class="card-body">
-            <button type="button" class="btn btn-primary mb-3" id="btn_02">
-              Đếm số
-            </button>
-            <div class="bg-success w-100 rounded">
-              <i class="fas fa-hand-point-right text-warning px-2"></i>
-              <p
-                class="text-dark font-weight-bold d-inline"
-                id="resultEx02"
-                style="height: 40px; line-height: 40px"
-              ></p>
+          <div class="card-header" id="card_ex02">
+            <h2 class="mb-0">
+              <button
+                class="btn text-left w-100"
+                type="button"
+                data-toggle="collapse"
+                data-target="#demSoDuong"
+              >
+                <span
+                  class="bg-primary px-2 py-1 text-dark border border-secondary"
+                  >2</span
+                >
+                Đếm số dương
+              </button>
+            </h2>
+          </div>
+          <div id="demSoDuong" class="collapse" data-parent="#myPractice">
+            <div class="card-body">
+              <button type="button" class="btn btn-primary mb-3" id="btn_02">
+                Đếm số
+              </button>
+              <div class="bg-success w-100 rounded">
+                <i class="fas fa-hand-point-right text-warning px-2"></i>
+                <p
+                  class="text-dark font-weight-bold d-inline"
+                  id="resultEx02"
+                  style="height: 40px; line-height: 40px"
+                ></p>
+              </div>
             </div>
           </div>
-        </div>
         </div>
         <!-- Tìm số nhỏ nhất -->
         <div class="card">
@@ -130,15 +130,15 @@
                 data-toggle="collapse"
                 data-target="#timSoNhoNhat"
               >
-                <span class="bg-primary px-2 py-1 text-dark border border-secondary">3</span> Tìm số nhỏ nhất
+                <span
+                  class="bg-primary px-2 py-1 text-dark border border-secondary"
+                  >3</span
+                >
+                Tìm số nhỏ nhất
               </button>
             </h2>
           </div>
-          <div
-            id="timSoNhoNhat"
-            class="collapse"
-            data-parent="#myPractice"
-          >
+          <div id="timSoNhoNhat" class="collapse" data-parent="#myPractice">
             <div class="card-body">
               <button type="button" class="btn btn-primary mb-3" id="btn_03">
                 Tìm số
@@ -153,9 +153,288 @@
               </div>
             </div>
           </div>
+        </div>
+        <!-- Tìm số dương nhỏ nhất -->
+        <div class="card">
+          <div class="card-header" id="card_ex04">
+            <h2 class="mb-0">
+              <button
+                class="btn text-left w-100"
+                type="button"
+                data-toggle="collapse"
+                data-target="#timSoDuongNhoNhat"
+              >
+                <span
+                  class="bg-primary px-2 py-1 text-dark border border-secondary"
+                  >4</span
+                >
+                Tìm số dương nhỏ nhất
+              </button>
+            </h2>
           </div>
+          <div
+            id="timSoDuongNhoNhat"
+            class="collapse"
+            data-parent="#myPractice"
+          >
+            <div class="card-body">
+              <button type="button" class="btn btn-primary mb-3" id="btn_04">
+                Tìm số
+              </button>
+              <div class="bg-success w-100 rounded">
+                <i class="fas fa-hand-point-right text-warning px-2"></i>
+                <p
+                  class="text-dark font-weight-bold d-inline"
+                  id="resultEx04"
+                  style="height: 40px; line-height: 40px"
+                ></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Tìm số chẵn cuối cùng -->
+        <div class="card">
+          <div class="card-header" id="card_ex05">
+            <h2 class="mb-0">
+              <button
+                class="btn text-left w-100"
+                type="button"
+                data-toggle="collapse"
+                data-target="#timSoChan"
+              >
+                <span
+                  class="bg-primary px-2 py-1 text-dark border border-secondary"
+                  >5</span
+                >
+                Tìm số chẵn cuối cùng
+              </button>
+            </h2>
+          </div>
+          <div id="timSoChan" class="collapse" data-parent="#myPractice">
+            <div class="card-body">
+              <button type="button" class="btn btn-primary mb-3" id="btn_05">
+                Tìm số chẵn
+              </button>
+              <div class="bg-success w-100 rounded">
+                <i class="fas fa-hand-point-right text-warning px-2"></i>
+                <p
+                  class="text-dark font-weight-bold d-inline"
+                  id="resultEx05"
+                  style="height: 40px; line-height: 40px"
+                ></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Đổi số 2 giá trị trong mảng -->
+        <div class="card">
+          <div class="card-header" id="card_ex06">
+            <h2 class="mb-0">
+              <button
+                class="btn text-left w-100"
+                type="button"
+                data-toggle="collapse"
+                data-target="#doiSo"
+              >
+                <span
+                  class="bg-primary px-2 py-1 text-dark border border-secondary"
+                  >6</span
+                >
+                Đổi số
+              </button>
+            </h2>
+          </div>
+          <div id="doiSo" class="collapse" data-parent="#myPractice">
+            <div class="card-body">
+              <div class="row mx-auto my-3 justify-content-start">
+                <input
+                  type="number"
+                  class="col-5 mr-4 form-control"
+                  id="index01"
+                  placeholder="Nhập số vị trí 1"
+                />
+                <input
+                  type="number"
+                  class="col-5 form-control"
+                  id="index02"
+                  placeholder="Nhập số vị trí 2"
+                />
+              </div>
+              <button type="button" class="btn btn-primary mb-3" id="btn_06">
+                Đổi chỗ
+              </button>
+              <div class="bg-success w-100 rounded">
+                <i class="fas fa-hand-point-right text-warning px-2"></i>
+                <p
+                  class="text-dark font-weight-bold d-inline"
+                  id="resultEx06"
+                  style="height: 40px; line-height: 40px"
+                ></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Sắp xếp tăng dần -->
+        <div class="card">
+          <div class="card-header" id="card_ex07">
+            <h2 class="mb-0">
+              <button
+                class="btn text-left w-100"
+                type="button"
+                data-toggle="collapse"
+                data-target="#sapXep"
+              >
+                <span
+                  class="bg-primary px-2 py-1 text-dark border border-secondary"
+                  >7</span
+                >
+                Sắp xếp tăng dần
+              </button>
+            </h2>
+          </div>
+          <div id="sapXep" class="collapse" data-parent="#myPractice">
+            <div class="card-body">
+              <button type="button" class="btn btn-primary mb-3" id="btn_07">
+                Sắp xếp
+              </button>
+              <div class="bg-success w-100 rounded">
+                <i class="fas fa-hand-point-right text-warning px-2"></i>
+                <p
+                  class="text-dark font-weight-bold d-inline"
+                  id="resultEx07"
+                  style="height: 40px; line-height: 40px"
+                ></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Tìm số nguyên tố đầu tiên trong mảng -->
+        <div class="card">
+          <div class="card-header" id="card_ex08">
+            <h2 class="mb-0">
+              <button
+                class="btn text-left w-100"
+                type="button"
+                data-toggle="collapse"
+                data-target="#timSoNguyenTo"
+              >
+                <span
+                  class="bg-primary px-2 py-1 text-dark border border-secondary"
+                  >8</span
+                >
+                Tìm số nguyên tố đầu tiên
+              </button>
+            </h2>
+          </div>
+          <div id="timSoNguyenTo" class="collapse" data-parent="#myPractice">
+            <div class="card-body">
+              <button type="button" class="btn btn-primary mb-3" id="btn_08">
+                Tìm số nguyên tố
+              </button>
+              <div class="bg-success w-100 rounded">
+                <i class="fas fa-hand-point-right text-warning px-2"></i>
+                <p
+                  class="text-dark font-weight-bold d-inline"
+                  id="resultEx08"
+                  style="height: 40px; line-height: 40px"
+                ></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Đếm số nguyên -->
+        <div class="card">
+          <div class="card-header" id="card_ex09">
+            <h2 class="mb-0">
+              <button
+                class="btn text-left w-100"
+                type="button"
+                data-toggle="collapse"
+                data-target="#demSoNguyen"
+              >
+                <span
+                  class="bg-primary px-2 py-1 text-dark border border-secondary"
+                  >9</span
+                >
+                Đếm số nguyên
+              </button>
+            </h2>
+          </div>
+          <div id="demSoNguyen" class="collapse" data-parent="#myPractice">
+            <div class="card-body">
+              <div class="row justify-content-start w-100 m-0">
+                <input
+                  type="number"
+                  class="col-7 form-control"
+                  id="newNum"
+                  placeholder="Nhập số"
+                />
+                <button
+                  type="button"
+                  class="col-3 btn btn-primary ml-3"
+                  id="btn_09_1"
+                >
+                  Thêm số
+                </button>
+              </div>
+              <div class="bg-success w-100 mx-auto my-3 px-3 rounded">
+                <i class="fas fa-hand-point-right text-warning px-2"></i>
+                <p
+                  class="text-dark font-weight-bold d-inline"
+                  id="resultEx09_1"
+                  style="height: 40px; line-height: 40px"
+                ></p>
+              </div>
+              <button type="button" class="btn btn-primary mb-3" id="btn_09_2">
+                Đếm số
+              </button>
+              <div class="bg-success w-100 rounded">
+                <i class="fas fa-hand-point-right text-warning px-2"></i>
+                <p
+                  class="text-dark font-weight-bold d-inline"
+                  id="resultEx09_2"
+                  style="height: 40px; line-height: 40px"
+                ></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- So sánh số lượng số âm và số dương -->
+        <div class="card">
+          <div class="card-header" id="card_ex10">
+            <h2 class="mb-0">
+              <button
+                class="btn text-left w-100"
+                type="button"
+                data-toggle="collapse"
+                data-target="#soSanh"
+              >
+                <span
+                  class="bg-primary px-2 py-1 text-dark border border-secondary"
+                  >10</span
+                >
+                So sánh số lượng số âm và dương
+              </button>
+            </h2>
+          </div>
+          <div id="soSanh" class="collapse" data-parent="#myPractice">
+            <div class="card-body">
+              <button type="button" class="btn btn-primary mb-3" id="btn_10">
+                So sánh
+              </button>
+              <div class="bg-success w-100 rounded">
+                <i class="fas fa-hand-point-right text-warning px-2"></i>
+                <p
+                  class="text-dark font-weight-bold d-inline"
+                  id="resultEx10"
+                  style="height: 40px; line-height: 40px"
+                ></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-
     <!-- BS4 JS -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -171,5 +450,12 @@
     <script src="./exercise_01.js"></script>
     <script src="./exercise_02.js"></script>
     <script src="./exercise_03.js"></script>
+    <script src="./exercise_04.js"></script>
+    <script src="./exercise_05.js"></script>
+    <script src="./exercise_06.js"></script>
+    <script src="./exercise_07.js"></script>
+    <script src="./exercise_08.js"></script>
+    <script src="./exercise_09.js"></script>
+    <script src="./exercise_10.js"></script>
   </body>
 </html>
